--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -47,24 +47,54 @@
 
     "banner-title-projects" : "Завершенная Работа",
     "banner-text-projects" : "Откройте для себя тщательно продуманные интерьеры, искусное мастерство и очаровательные экстерьеры, которые отличают нашу работу.",
-    
-    
-    
-    
-    "banner-title-aboutus" : "Качество работы",
-    "banner-text-aboutus" : "Ваш дом должен быть отражением вашего уникального образа жизни и личного вкуса. Вот почему мы предлагаем индивидуальные решения, тесно сотрудничая с вами на протяжении всего процесса проектирования и строительства.",
-
+    "projects-title": "Наши проекты",
+    "projects-sub-title" : "Откройте для себя наши проекты - кураторская подборка наших лучших индивидуальных деревянных фасадных домов.",
+    "projects-item-name": "Шале с открытой террасой",
 
 
 
     "banner-title-partners" : "Наши партнеры",
     "banner-text-partners" : "Мы гордимся тем, что работаем вместе с избранной группой уважаемых партнеров, которые разделяют наше стремление к совершенству и наше видение создания исключительных домов с деревянным фасадом на заказ.",
-   
+    "partners-title" : "Партнеры",
+    "partners-sub-title" : "Мы ценим доверие, которое наши партнеры нам оказывают, и признаем важную роль, которую они играют в успехе наших проектов. Благодаря безупречному сотрудничеству, мы способны достигать выдающихся результатов, создавая дома, превосходящие ожидания и проходящие испытание временем. InIn всегда ищет новые возможности для сотрудничества с профессионалами, разделяющими наши ценности. Если вы являетесь поставщиком экологически чистых материалов, инновационным поставщиком технологий или опытным подрядчиком с приверженностью к качественной ремесленной работе, мы приглашаем вас исследовать потенциальные возможности партнерства.",
+    "partners-join" : "СТАНЬТЕ ПАРТНЕРОМ УЖЕ СЕГОДНЯ.",
+    "partners-contacts-button": "КОНТАКТЫ",
 
 
 
     "banner-title-exports" : "Экспорт",
     "banner-text-exports" : "Независимо от того, являетесь ли вы индивидуальным домовладельцем, застройщиком или архитектором, мы стремимся предоставить вам самые высокие стандарты мастерства и обслуживания.",
- 
-    "" : ""
+    "exports-title": "Экспорт по всей Европе",
+    "exports-sub-title" : "Навигация логистики европейского экспорта - наша экспертиза. Мы установили надежные партнерские отношения и эффективные процессы, чтобы обеспечить безупречный опыт, начиная от транспортировки до доставки на место. Мы с радостью общаемся с европейскими клиентами, которые ценят мастерство и качество наших индивидуально изготовленных деревянных фасадных домов. Свяжитесь с нами сегодня, чтобы узнать, как мы можем воплотить вашу идею в жизнь и создать дом, воплощающий европейский шарм и стиль. Свяжитесь с нами сегодня и отправимся вместе в путешествие, чтобы создать ваш идеальный индивидуально изготовленный деревянный фасадный дом.",
+    "exports-contacts-button" : "КОНТАКТЫ",
+    "exports-icons-1" : "Международное присутствие",
+    "exports-icons-1-text" : "Экспортируя по всей Европе, наши индивидуально изготовленные деревянные фасадные дома нашли свое место в домах в Италии, Швеции, Франции и многих других странах. Наш проверенный опыт говорит о нашей способности обслуживать клиентов за пределами границ.",
+    "exports-icons-2" : "Индивидуальный дизайн с европейским очарованием",
+    "exports-icons-2-text" : "Мы разрабатываем наши индивидуальные деревянные дома, чтобы отражать уникальный шарм каждого европейского региона. От средиземноморской элегантности до скандинавского минимализма, наши дома гармонично сочетаются с местными архитектурными стилями.",
+    "exports-icons-3" : "Беспроблемная логистика",
+    "exports-icons-3-text" : " Благодаря нашему опыту в международной логистике, мы гарантируем безупречный опыт. От транспортировки до таможенного оформления, наша преданная команда берет на себя все детали для беспроблемного процесса доставки.",
+    "exports-icons-4" : "Обязательство в отношении устойчивости",
+    "exports-icons-4-text" : "Устойчивость является сердцевиной нашей деятельности. Мы заботимся о ответственном источнике материалов, приоритезируем экологически чистые практики и создаем индивидуально изготовленные деревянные фасадные дома, воплощающие в себе вечную красоту, с уважением к окружающей среде.",
+
+
+
+
+    "banner-title-aboutus" : "Качество работы",
+    "banner-text-aboutus" : "Ваш дом должен быть отражением вашего уникального образа жизни и личного вкуса. Именно поэтому мы предлагаем индивидуальные решения, тесно сотрудничая с вами на протяжении всего процесса проектирования и строительства.",
+    "aboutus-sub-title" : "В InIn Estate мы посвящаем себя не только строительству домов, но и созданию домов, которые вдохновляют и обеспечивают длительный комфорт. Наша цель - превзойти ваши ожидания и создать пространства, которые вы и ваши лизкие можете называть своими. От начального концептуального проектирования до последних штрихов, наше внимание к деталям гарантирует, что каждый аспект вашего мечтательного дома будет тщательно создан. Свяжитесь с нами сегодня и давайте вместе отправимся в путешествие, чтобы создать ваш идеальный индивидуально изготовленный деревянный фасадный дом.",
+    "aboutus-contacts-button" : "КОНТАКТЫ",
+    "aboutus-questions-title" : "Часто задаваемые вопросы",
+    "aboutus-questions-1" : "Сколько времени обычно занимает проектирование и строительство индивидуально изготовленного деревянного фасадного дома?",
+    "aboutus-questions-1-answer" : "Временные рамки для проектирования и строительства индивидуально изготовленного деревянного фасадного дома могут варьироваться в зависимости от различных факторов, таких как сложность дизайна, размер дома и процессы получения разрешений. В общем, весь процесс может занять несколько месяцев до года или даже дольше, включая разработку дизайна, получение разрешений и строительство. Точное время выполнения работ может быть обсуждено и определено на начальном этапе консультации.",
+    "aboutus-questions-2" : " Какие преимущества выбора индивидуально изготовленного деревянного фасадного дома по сравнению с традиционным строительством?",
+    "aboutus-questions-2-answer" : "Преимущество выбора индивидуально изготовленного деревянного фасадного дома по сравнению с традиционным строительством заключается в возможности создания по-настоящему уникального и персонализированного жилого пространства. С индивидуальным дизайном у вас есть свобода настроить каждый аспект вашего дома под ваши конкретные потребности, предпочтения и образ жизни, что приведет к созданию уникального жилища, отражающего вашу индивидуальность.",
+    "aboutus-questions-3" : "Предоставляете ли вы какие-либо гарантии на строительство и использованные материалы?",
+    "aboutus-questions-3-answer" : "Да, мы предоставляем гарантии и гарантии для обеспечения качества нашего строительства и использованных материалов. Подробности о конкретных гарантиях и гарантиях будут предоставлены во время консультации и заключения договора.",
+    "aboutus-questions-4" : "Могу ли я включить конкретные элементы дизайна или настроить планировку моего индивидуально изготовленного деревянного фасадного дома по своему вкусу?",
+    "aboutus-questions-4-answer" : "Конечно! Мы специализируемся на создании индивидуальных домов, адаптированных под ваши конкретные потребности и предпочтения. Вы можете сотрудничать с нашей командой дизайнеров, чтобы включить конкретные элементы дизайна и настроить планировку под свой образ жизни. Стоит отметить, что индивидуально изготовленные деревянные фасадные дома могут быть дороже по сравнению со стандартным строительством.",
+    "aboutus-questions-5" : "Дороже ли индивидуально изготовленные деревянные фасадные дома по сравнению со стандартным строительством?",
+    "aboutus-questions-5-answer" : "Стоимость индивидуально изготовленного деревянного фасадного дома может варьироваться в зависимости от таких факторов, как размер, сложность дизайна и выбранные материалы. Хотя индивидуальные дома могут потребовать дополнительных затрат, они предлагают преимущество индивидуального дизайна и уникальных особенностей, отражающих ваш индивидуальный стиль. Мы тесно сотрудничаем с вами, чтобы убедиться, что проект соответствует вашему бюджету и предлагает наилучшую стоимость для вашего инвестиции.",
+    "aboutus-questions-6" : "Вы можете помочь получить необходимые разрешения и одобрения для строительства индивидуального деревянного фасадного дома?",
+    "aboutus-questions-6-answer" : "Абсолютно! У нас есть команда, имеющая опыт работы с процессом получения разрешений и одобрений. Мы поможем вам получить необходимые разрешения и одобрения, чтобы обеспечить гладкое строительство."
+
 }
