--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -47,47 +47,55 @@
     
     "banner-title-projects" : "Complete Work",
     "banner-text-projects" : "Explore the thoughtfully designed interiors, expert craftsmanship, and captivating exteriors that define our work.",
-    
-    
-    
-    
-    "banner-title-aboutus" : "Quality of Work",
-    "banner-text-aboutus" : "Your home should be a reflection of your unique lifestyle and personal taste. That's why we offer tailored solutions, working closely with you throughout the design and construction process.",
-    
+    "projects-title": "Our Projects",
+    "projects-sub-title" : "Discover Our Projects - a curated collection of our finest custom wooden facade houses.",
+    "projects-item-name": "Open Terrace Chalet",
+  
 
 
 
     "banner-title-partners" : "Our Partners",
     "banner-text-partners" : "We are proud to work alongside a select group of esteemed partners who share our commitment to excellence and share our vision for creating exceptional custom wooden facade houses.",
-    
+    "partners-title" : "Partners",
+    "partners-sub-title" : "We value the trust our partners place in us and recognize the instrumental role they play in the success of our projects. By working together seamlessly, we are able to deliver outstanding results, creating homes that exceed expectations and stand the test of time. InIn is always seeking new opportunities to collaborate with like-minded professionals. If you are a supplier of sustainable materials, an innovative technology provider, or a skilled contractor with a commitment to quality craftsmanship, we invite you to explore potential partnership opportunities.",
+    "partners-join" : "BECOME OUR PARTNER TODAY",
+    "partners-contacts-button": "CONTACTS",
+
 
 
 
     "banner-title-exports" : "Exports",
     "banner-text-exports" : "Whether you are an individual homeowner, developer, or architect, we are dedicated to providing you with the highest standards of craftsmanship and service.",
-  
+    "exports-title": "Exports around Europe",
+    "exports-sub-title" : "Navigating the logistics of European exports is our expertise. We have established reliable partnerships and efficient processes to ensure a seamless experience, from transportation to on-site delivery. We are excited to connect with European clients who appreciate the artistry and quality of our custom wooden facade houses. Contact us today to explore how we can bring your vision to life and create a home that embodies European charm and style. Contact us today and let us embark on a journey together to create your perfect custom wooden facade house.",
+    "exports-contacts-button" : "CONTACTS",
+    "exports-icons-1" : "International Reach",
+    "exports-icons-1-text" : "Exporting across Europe, our custom wooden facade houses have reached homes in Italy, Sweden, France, and more. Our proven track record speaks to our ability to serve clients beyond borders.",
+    "exports-icons-2" : "Tailored Design for European Charm",
+    "exports-icons-2-text" : "We design our custom wooden houses to reflect the unique charm of each European region. From Mediterranean elegance to Scandinavian minimalism, our homes seamlessly blend with local architectural styles.",
+    "exports-icons-3" : "Smooth Logistics",
+    "exports-icons-3-text" : "With expertise in international logistics, we ensure a seamless experience. From transportation to customs clearance, our dedicated team handles the details for a hassle-free delivery process.",
+    "exports-icons-4" : "Sustainability Commitment",
+    "exports-icons-4-text" : "Sustainability is at the heart of what we do. We source responsibly, prioritize eco-friendly practices, and create custom wooden facade houses that embody enduring beauty while respecting the environment.",
 
 
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : "",
-    "" : ""
+
+
+    "banner-title-aboutus" : "Quality of Work",
+    "banner-text-aboutus" : "Your home should be a reflection of your unique lifestyle and personal taste. That's why we offer tailored solutions, working closely with you throughout the design and construction process.",
+    "aboutus-sub-title" : "At InIn Estate, we are dedicated to building not just houses, but homes that inspire and provide lasting comfort. Our goal is to exceed your expectations and create spaces that you and your loved ones can truly call your own. From the initial conceptualization to the final touches, our attention to detail ensures that every aspect of your dream home is meticulously crafted. Contact us today and let us embark on a journey together to create your perfect custom wooden facade house.",
+    "aboutus-contacts-button" : "CONTACTS",
+    "aboutus-questions-title" : "Frequently asked questions",
+    "aboutus-questions-1" : "How long does it typically take to design and build a custom wooden facade house?",
+    "aboutus-questions-1-answer" : "The timeline for designing and building a custom wooden facade house can vary based on various factors, such as the complexity of the design, size of the house, and permitting processes. Generally, it can take several months to a year or more to complete the entire process, including design development, obtaining permits, and construction. A precise timeline can be discussed and determined during the initial consultation phase.",
+    "aboutus-questions-2" : "What is the advantage of choosing a custom wooden facade house over a traditional construction?",
+    "aboutus-questions-2-answer" : "The advantage of choosing a custom wooden facade house over traditional construction is the ability to create a truly unique and personalized living space. With custom designs, you have the freedom to tailor every aspect of your home to your specific needs, preferences, and lifestyle, resulting in a one-of-a-kind residence that reflects your individuality.",
+    "aboutus-questions-3" : "Do you provide any warranties or guarantees for the construction and materials used?",
+    "aboutus-questions-3-answer" : "Yes, we provide warranties and guarantees to ensure the quality of our construction and materials. Details about the specific warranties and guarantees will be provided during the consultation and contract phase.",
+    "aboutus-questions-4" : "Can I incorporate specific design features or personalize the layout of my custom wooden facade house?",
+    "aboutus-questions-4-answer" : "Certainly! We specialize in creating custom homes tailored to your specific needs and preferences. You can collaborate with our design team to incorporate specific design features and personalize the layout to suit your lifestyle. Are custom wooden facade houses more expensive compared to standard construction?",
+    "aboutus-questions-5" : "Are custom wooden facade houses more expensive compared to standard construction?",
+    "aboutus-questions-5-answer" : "The cost of a custom wooden facade house can vary depending on factors such as size, design complexity, and selected materials. While custom homes may involve additional costs, they offer the advantage of tailored design and unique features that reflect your individual style. We work closely with you to ensure the project fits within your budget and delivers the best value for your investment.",
+    "aboutus-questions-6" : "Can you assist with obtaining necessary permits and approvals for building a custom wooden facade house?",
+    "aboutus-questions-6-answer" : "Absolutely! We have a team experienced in navigating the permit and approval process. We will assist you in obtaining the necessary permits and approvals to ensure a smooth construction process."
 }
