--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -47,24 +47,53 @@
 
     "banner-title-projects" : "Paveikts Darbs",
     "banner-text-projects" : "Izpētiet pārdomāti izstrādātos interjerus, profesionālu meistarību un valdzinošus eksterjerus, kas nosaka mūsu darbu.",
+    "projects-title": "Mūsu projekti",
+    "projects-sub-title" : "Atklājiet mūsu projektus - rūpīgi atlasīta kolekcija ar mūsu labākajiem individuāli veidotajām koka fasādes mājām.",
+    "projects-item-name": "Atvērts terases māja",
 
 
-
-
-    "banner-title-aboutus" : "Kvalitatīvs Darbs",
-    "banner-text-aboutus" : "Jūsu mājām vajadzētu atspoguļot jūsu unikālo dzīvesveidu un personīgo gaumi. Tāpēc mēs piedāvājam pielāgotus risinājumus, cieši sadarbojoties ar jums visā projektēšanas un būvniecības procesā.",
- 
-
-
-
+    
     "banner-title-partners" : "Mūsu partneri",
     "banner-text-partners" : "Mēs lepojamies, ka sadarbojamies ar atlasītu cienījamu partneru grupu, kam ir kopīga mūsu apņemšanās sasniegt izcilību un mūsu redzējums par izcilu koka fasādes māju izveidi pēc pasūtījuma.",
-   
+    "partners-title" : "Partneri",
+    "partners-sub-title" : "Mēs novērtējam mūsu partneru uzticību un atzīstam to būtisko lomu, ko tie spēlē mūsu projektu panākumā. Savstarpēji saskaņoti sadarbojoties, mēs spējam sniegt izcilus rezultātus, radot mājas, kas pārsniedz cerības un iztur laika pārbaudi. InIn vienmēr meklē jaunas iespējas sadarboties ar līdzdomājošiem profesionāļiem. Ja jūs esat ilgtspējīgu materiālu piegādātājs, inovatīva tehnoloģiju nodrošinātājs vai prasmīgs uzņēmējs ar apņemšanos nodrošināt kvalitatīvu amatniecību, mēs aicinām jūs izpētīt potenciālās partnerattiecību iespējas.",
+    "partners-join" : "KĻŪSTI PAR MŪSU PARTNERI JAU ŠODIEN.",
+    "partners-contacts-button": "KONTAKTI",
 
 
 
     "banner-title-exports" : "Eksports",
     "banner-text-exports" : "Neatkarīgi no tā, vai esat individuāls mājas īpašnieks, attīstītājs vai arhitekts, mēs cenšamies nodrošināt jums visaugstākos meistarības un pakalpojumu standartus.",
- 
-    "" : ""
+    "exports-title": "Eksporti pa Eiropu",
+    "exports-sub-title" : "Eiropas eksporta loģistikas navigācija ir mūsu ekspertīze. Mēs esam izveidojuši uzticamas partnerattiecības un efektīvus procesus, lai nodrošinātu nevainojamu pieredzi, sākot no transportēšanas līdz vietējai piegādei. Mēs ar prieku sazināmies ar Eiropas klientiem, kuri novērtē mūsu individuāli veidotās koka fasādes mājas māksliniecisko izpildi un kvalitāti. Sazinieties ar mums jau šodien, lai izpētītu, kā mēs varam īstenot jūsu viziju un radīt mājokli, kas atspoguļo Eiropas šarmu un stilu. Sazinieties ar mums jau šodien un devieties kopā ceļojumā, lai radītu jūsu ideālo individuāli veidoto koka fasādes māju.",
+    "exports-contacts-button" : "KONTAKTI",
+    "exports-icons-1" : "Starptautiskais pārklājums",
+    "exports-icons-1-text" : "Eksportējot pa visu Eiropu, mūsu individuāli veidotās koka fasādes mājas ir sasniedzušas mājas Itālijā, Zviedrijā, Francijā un citos valstīs. Mūsu pierādīta reputācija apliecina mūsu spēju apkalpot klientus ārpus robežām.",
+    "exports-icons-2" : " Izgatavots dizains Eiropas šarmam",
+    "exports-icons-2-text" : "Mēs projektējam mūsu individuāli veidotās koka mājas, lai atspoguļotu katras Eiropas reģiona unikālo šarmu. Sākot no vidusjūras elegances līdz skandināvu minimalismam, mūsu mājas harmoniski saplūst ar vietējiem arhitektūras stiliem.",
+    "exports-icons-3" : "Viegla loģistika",
+    "exports-icons-3-text" : "Ar mūsu starptautisko loģistikas ekspertīzi, mēs nodrošinām vienkāršu pieredzi. Sākot no transporta līdz muitas atļaujām, mūsu dediķēta komanda nodrošina visu detaļu apstrādi bez problēmām piegādes procesā.",
+    "exports-icons-4" : "Ilgtspējas apņemšanās",
+    "exports-icons-4-text" : "Ilgtspēja ir mūsu darbības pamatā. Mēs atbildīgi iegūstam materiālus, prioritizējam ekoloģiski draudzīgas prakses un radām individuāli veidotas koka fasādes mājas, kas iemieso noturīgu skaistumu, ievērojot apkārtējo vidi.",
+
+
+
+
+    "banner-title-aboutus" : "Darba kvalitāte",
+    "banner-text-aboutus" : "Jūsu mājai vajadzētu atspoguļot jūsu unikālo dzīvesveidu un personīgo gaumi. Tāpēc mēs piedāvājam individuāli pielāgotas risinājumus, cieši sadarbojoties ar jums visā dizaina un būvniecības procesā.",
+    "aboutus-sub-title" : "InIn Estate ir veltīts ne tikai māju, bet mājokļu būvniecībai, kas iedvesmo un sniedz ilgstošu komfortu. Mūsu mērķis ir pārsniegt jūsu cerības un radīt telpas, kuras jūs un jūsu mīļie patiešām varat saukt par savām. No sākotnējās konceptualizācijas līdz pēdējām pieskārienam, mūsu uzmanība pret detaļām nodrošina, ka katrs jūsu sapņu mājas aspekts tiek rūpīgi izveidots. Sazinieties ar mums jau šodien un devieties kopā ceļojumā, lai radītu jūsu ideālo individuāli veidoto koka fasādes māju.",
+    "aboutus-contacts-button" : "KONTAKTI",
+    "aboutus-questions-title" : "FBieži uzdotie jautājumi",
+    "aboutus-questions-1" : "Cik ilgi parasti aizņem individuāli veidotās koka fasādes mājas projektēšana un būvniecība?",
+    "aboutus-questions-1-answer" : "Individuāli veidotās koka fasādes mājas projektēšanas un būvniecības laiks var atšķirties atkarībā no dažādiem faktoriem, piemēram, dizaina sarežģītības, mājas izmēra un atļauju iegūšanas procesa. Kopumā šis process var aizņemt vairākus mēnešus līdz pat gadu vai ilgāk, ietverot dizaina izstrādi, atļauju iegūšanu un būvniecību. Precīzs laika grafiks var tikt apspriests un noskaidrots sākotnējās konsultācijas posmā.",
+    "aboutus-questions-2" : " Kādas priekšrocības ir izvēlēties individuāli veidotu koka fasādes māju salīdzinājumā ar tradicionālu būvniecību?",
+    "aboutus-questions-2-answer" : "Priekšrocība izvēlēties individuāli veidotu koka fasādes māju salīdzinājumā ar tradicionālu būvniecību ir iespēja radīt patiesi unikālu un personificētu dzīves telpu. Ar individuālajiem dizainiem jums ir brīvība pielāgot katru mājas aspektu saviem konkrētajiem vajadzībām, priekšlikumiem un dzīvesveidam, rezultātā radot īpašu mājvietu, kas atspoguļo jūsu individualitāti.",
+    "aboutus-questions-3" : "Vai jūs sniedzat garantijas par būvniecību un izmantotajiem materiāliem?",
+    "aboutus-questions-3-answer" : "Jā, mēs sniedzam garantijas un garantijas, lai nodrošinātu mūsu būvniecības kvalitāti un izmantoto materiālu drošību. Konkrētas garantijas un garantijas detaļas tiks sniegtas konsultāciju un līgumu noslēgšanas laikā.",
+    "aboutus-questions-4" : " Vai es varu iekļaut konkrētus dizaina elementus vai pielāgot individuāli veidotās koka fasādes mājas izkārtojumu?",
+    "aboutus-questions-4-answer" : "Protams! Mēs specializējamies individuāli veidotu māju izveidē, kas atbilst jūsu konkrētajām vajadzībām un priekšlikumiem. Jūs varat sadarboties ar mūsu dizaina komandu, lai iekļautu konkrētus dizaina elementus un pielāgotu izkārtojumu, kas atbilst jūsu dzīvesveidam. Vai individuāli veidotās koka fasādes mājas ir dārgākas salīdzinājumā ar standarta būvniecību?",
+    "aboutus-questions-5" : "Vai individuāli veidotās koka fasādes mājas ir dārgākas salīdzinājumā ar standarta būvniecību?",
+    "aboutus-questions-5-answer" : "Individuāli veidotās koka fasādes mājas izmaksas var atšķirties atkarībā no faktoriem, piemēram, izmēra, dizaina sarežģītības un izvēlētajiem materiāliem. Lai gan individuāli izgatavoti mājokļi var prasīt papildu izmaksas, tie piedāvā priekšrocību personalizēta dizaina un unikālu elementu veidā, kas atspoguļo jūsu individuālo stilu. Mēs cieši sadarbojamies ar jums, lai nodrošinātu, ka projekts iekļaujas jūsu budžetā un nodrošina labāko vērtību jūsu ieguldījumam.",
+    "aboutus-questions-6" : "Vai jūs varat palīdzēt ar nepieciešamo atļauju un apstiprinājumu iegūšanu individuāli veidotās koka fasādes mājas būvniecībai?",
+    "aboutus-questions-6-answer" : "Absolūti! Mums ir komanda, kas pieredzējusi atļauju un apstiprinājumu procesu. Mēs jums palīdzēsim iegūt nepieciešamās atļaujas un apstiprinājumus, lai nodrošinātu gludu būvniecības procesu."
 }
