Created modal for client's zone button and for FeaturedItems button

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -96,6 +96,12 @@
     "aboutus-questions-5" : "Sind maßgefertigte Holzfassadenhäuser im Vergleich zur Standardbauweise teurer?",
     "aboutus-questions-5-answer" : "Die Kosten für ein maßgefertigtes Holzfassadenhaus können je nach Größe, Designkomplexität und den ausgewählten Materialien variieren. Obwohl individuell gestaltete Häuser möglicherweise zusätzliche Kosten mit sich bringen, bieten sie den Vorteil einer maßgeschneiderten Gestaltung und einzigartiger Merkmale, die Ihren individuellen Stil widerspiegeln. Wir arbeiten eng mit Ihnen zusammen, um sicherzustellen, dass das Projekt in Ihr Budget passt und den bestmöglichen Wert für Ihre Investition bietet.",
     "aboutus-questions-6" : "Können Sie bei der Beschaffung der erforderlichen Genehmigungen und Zulassungen für den Bau eines maßgefertigten Holzfassadenhauses behilflich sein?",
-    "aboutus-questions-6-answer" : "Absolut! Wir haben ein Team, das erfahren ist im Umgang mit Genehmigungs- und Zulassungsverfahren. Wir werden Ihnen bei der Beschaffung der erforderlichen Genehmigungen und Zulassungen helfen, um einen reibungslosen Bauprozess zu gewährleisten."
+    "aboutus-questions-6-answer" : "Absolut! Wir haben ein Team, das erfahren ist im Umgang mit Genehmigungs- und Zulassungsverfahren. Wir werden Ihnen bei der Beschaffung der erforderlichen Genehmigungen und Zulassungen helfen, um einen reibungslosen Bauprozess zu gewährleisten.",
+
+
+
+
+    "modal-title": "In Arbeit",
+    "modal-text": "Wir entschuldigen uns für die Unannehmlichkeiten, aber die Zone unseres Kunden ist noch in Bearbeitung. Bitte kontaktieren Sie uns in der Zwischenzeit über unsere E-Mail-Adresse oder Telefonnummer."
 
 }
