--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -97,5 +97,11 @@
     "aboutus-questions-5" : "Are custom wooden facade houses more expensive compared to standard construction?",
     "aboutus-questions-5-answer" : "The cost of a custom wooden facade house can vary depending on factors such as size, design complexity, and selected materials. While custom homes may involve additional costs, they offer the advantage of tailored design and unique features that reflect your individual style. We work closely with you to ensure the project fits within your budget and delivers the best value for your investment.",
     "aboutus-questions-6" : "Can you assist with obtaining necessary permits and approvals for building a custom wooden facade house?",
-    "aboutus-questions-6-answer" : "Absolutely! We have a team experienced in navigating the permit and approval process. We will assist you in obtaining the necessary permits and approvals to ensure a smooth construction process."
+    "aboutus-questions-6-answer" : "Absolutely! We have a team experienced in navigating the permit and approval process. We will assist you in obtaining the necessary permits and approvals to ensure a smooth construction process.",
+
+
+
+
+    "modal-title": "Work in progress",
+    "modal-text": "Sorry for your inconvenience, but our client's zone is still in progress. In the meantime please contact us via our email or phone number."
 }
