--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -95,5 +95,12 @@
     "aboutus-questions-5" : "Vai individuāli veidotās koka fasādes mājas ir dārgākas salīdzinājumā ar standarta būvniecību?",
     "aboutus-questions-5-answer" : "Individuāli veidotās koka fasādes mājas izmaksas var atšķirties atkarībā no faktoriem, piemēram, izmēra, dizaina sarežģītības un izvēlētajiem materiāliem. Lai gan individuāli izgatavoti mājokļi var prasīt papildu izmaksas, tie piedāvā priekšrocību personalizēta dizaina un unikālu elementu veidā, kas atspoguļo jūsu individuālo stilu. Mēs cieši sadarbojamies ar jums, lai nodrošinātu, ka projekts iekļaujas jūsu budžetā un nodrošina labāko vērtību jūsu ieguldījumam.",
     "aboutus-questions-6" : "Vai jūs varat palīdzēt ar nepieciešamo atļauju un apstiprinājumu iegūšanu individuāli veidotās koka fasādes mājas būvniecībai?",
-    "aboutus-questions-6-answer" : "Absolūti! Mums ir komanda, kas pieredzējusi atļauju un apstiprinājumu procesu. Mēs jums palīdzēsim iegūt nepieciešamās atļaujas un apstiprinājumus, lai nodrošinātu gludu būvniecības procesu."
+    "aboutus-questions-6-answer" : "Absolūti! Mums ir komanda, kas pieredzējusi atļauju un apstiprinājumu procesu. Mēs jums palīdzēsim iegūt nepieciešamās atļaujas un apstiprinājumus, lai nodrošinātu gludu būvniecības procesu.",
+
+
+
+
+    "modal-title": "Darbs procesā",
+    "modal-text": "Atvainojamies par sagādātajām neērtībām, bet mūsu klientu zonas izstrāde vēl nav pabeigta. Tikmēr, lūdzu, sazinieties ar mums pa mūsu e-pastu vai tālruņa numuru."
+
 }
