--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -95,6 +95,13 @@
     "aboutus-questions-5" : "Дороже ли индивидуально изготовленные деревянные фасадные дома по сравнению со стандартным строительством?",
     "aboutus-questions-5-answer" : "Стоимость индивидуально изготовленного деревянного фасадного дома может варьироваться в зависимости от таких факторов, как размер, сложность дизайна и выбранные материалы. Хотя индивидуальные дома могут потребовать дополнительных затрат, они предлагают преимущество индивидуального дизайна и уникальных особенностей, отражающих ваш индивидуальный стиль. Мы тесно сотрудничаем с вами, чтобы убедиться, что проект соответствует вашему бюджету и предлагает наилучшую стоимость для вашего инвестиции.",
     "aboutus-questions-6" : "Вы можете помочь получить необходимые разрешения и одобрения для строительства индивидуального деревянного фасадного дома?",
-    "aboutus-questions-6-answer" : "Абсолютно! У нас есть команда, имеющая опыт работы с процессом получения разрешений и одобрений. Мы поможем вам получить необходимые разрешения и одобрения, чтобы обеспечить гладкое строительство."
+    "aboutus-questions-6-answer" : "Абсолютно! У нас есть команда, имеющая опыт работы с процессом получения разрешений и одобрений. Мы поможем вам получить необходимые разрешения и одобрения, чтобы обеспечить гладкое строительство.",
+
+
+
+
+    "modal-title": "Работа в процессе",
+    "modal-text": "Приносим извинения за неудобства, но зона для клиентов находится в стадии разработки. В то же время, пожалуйста, свяжитесь с нами по электронной почте или номеру телефона."
+
 
 }
