Added new items and their translations to FeaturedSection

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -13,6 +13,8 @@
     "featured-name-1" : "Offener Grundriss und niedriges Profil",
     "featured-name-2" : "Offene Terrasse und großes Fenster",
     "featured-name-3" : "Moderne Doppelhäuser",
+    "featured-name-4" : "Strohballen nach Hause",
+    "featured-name-5" : "Blockhaushaus",
     "featured-price" : "Startpreis",
     "featured-button" : "Machen Sie ein Angebot",
 
