--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,6 +13,8 @@
     "featured-name-1" : "Open Plan & Low Profile",
     "featured-name-2" : "Open Terrace & Wide window",
     "featured-name-3" : "Modern twin houses",
+    "featured-name-4" : "Straw Bale home",
+    "featured-name-5" : "Log Cabin home",
     "featured-price" : "Starting price",
     "featured-button" : "Make an offer",
 
