--- a/public/locales/lv/common.json
+++ b/public/locales/lv/common.json
@@ -13,7 +13,9 @@
     "featured-name-1" : "Atvērts plāns un zems profils",
     "featured-name-2" : "Liela terase & Plaši logi",
     "featured-name-3" : "Mūsdienīgas dvīņu mājas",
-    "featured-price" : "Sākuma cena",
+    "featured-name-4" : "Salmu ķīpu māja",
+    "featured-name-5" : "Guļbaļķu māja",
+    "featured-price" : "Salmu stila māja",
     "featured-button" : "Uztaisīt piedāvājumu",
 
     "decore-text" : "“Mēs specializējamies unikālu māju izstrādē, kas pielāgotas jūsu vajadzībām. Mūsu prasmīgo profesionāļu komanda lepojas ar kvalitatīvu darbu, kas ir nepārspējams šajā nozarē!,,",
