--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -15,6 +15,8 @@
     "featured-name-3" : "Современные дома-близнецы",
     "featured-price" : "Начальная цена",
     "featured-button" : "Сделать предложение",
+    "featured-name-4" : "Дом в стиле соломенных тюков",
+    "featured-name-5" : "Бревенчатый дом",
 
     "decore-text" : "«Мы специализируемся на создании уникальных домов на заказ с учетом ваших потребностей. Наша команда квалифицированных специалистов гордится тем, что производит высококачественную работу, не имеющую себе равных в отрасли!,,",
     "decore-button" : "Узнать больше",
